# pi-BEM

./: .clang-format  .gitignore  CMakeLists.txt  pi-BEM.code-workspace  runcmake.sh  setenv.sh
RUN_SPHERE/: parameters_bem_3.prm  recompile_and_execute_script.txt
docs/: pibem.odt
docs/MARINE_2023/: Marine2023-Instructions-Paper.tex  marine_2023_Paper.cls
docs/latex/: template_Article.tex
docs/python/: ErrorEstimators.py  FreeSurfaceFlowPertubationExpansion.py  HBIE_derivation.py  HBIE_kernel.py  HBIE_one_over_r3_expansion_check.py  PointSourceSymbolicDerivatives.py  hemisphere_convergence_analysis.py
examples/: checkvelocity.py  wave_elevation.py
examples/example01_naca0012_airfoil/: parameters_bem_3.prm
examples/example02_sphere_submerged/: Color_1.iges  coarse_sphere.inp  example02_sphere_submerged.py  parameters_bem_3.prm
examples/example03_spheroid_submerged/: Color_1.iges  coarse_underwater_spheroid.inp  example03_spheroid_submerged.py  parameters_bem_3.prm
examples/example04_Hemisphere/: Color_1.iges  mesh.inp  parameters_bem_3.prm  pibem.json  plot_mesh.py  plot_velocity_field.py  refinement.json
examples/example04_Hemisphere2/: body.json  mesh.inp  parameters_bem_3.prm  plot_mesh.py  refinement.json
examples/example04_hemisphere/: Color_1.iges  parameters_bem_3.prm
examples/example04a_hemisphere/: parameters_bem_3.prm
examples/example04b_hemisphere_hT_2.0/: mesh.inp  parameters_bem_3.prm
examples/example04c_hemisphere_hT_1.2/: mesh.inp  parameters_bem_3.prm
examples/example04d_hemisphere_in_box_hT_1.2/: body.json  parameters_bem_3.prm
examples/example05_DTC_ship/: Color_1.iges  Curve_1.iges  DTC_ship_centerline.iges  DTC_ship_coarseGrid.inp  DTC_ship_waterline.iges  parameters_bem_3.prm
examples/example05_DTC_ship_shallow_water/: Curve_2.iges  mesh.inp  parameters_bem_3.prm
examples/example06_KCS/: Color_1.iges  Curve_2.iges  Curve_4.iges  mesh.inp  parameters_bem_3.prm  refinement.json
examples/example06_KCS_ship/: Color_1.iges  Color_2.iges  KCS_hull_FT_coarseGrid.inp  mesh.inp  meshCheckUniqueVtx.inp  parameters_bem_3.prm
examples/example07_KCS_ship_shallow_water/: Curve_1.iges  Curve_2.iges  Curve_3.iges  mesh.inp  parameters_bem_3.prm
examples/example08_KVLCC2/: Curve_1.iges  mesh.inp  parameters_bem_3.prm  refinement.json
examples/example08_hemisphere_shallow_water/: mesh.inp  parameters_bem_3.prm
examples/example09_WigleyHull/: Color_1.iges  Color_2.iges  Curve_1.iges  Curve_11.iges  Curve_2.iges  Curve_3.iges  Curve_5.iges  Curve_6.iges  Curve_7.iges  Curve_9.iges  mesh.inp  parameters_bem_3.prm
examples/example10_WigleyHull_adaptive/: parameters_bem_3.prm
examples/example11_WigleyHull_seabed/: Curve_10.iges  Curve_4.iges  parameters_bem_3.prm
examples/example12_cylinder/: mesh.inp  parameters_bem_3.prm
examples/example13_halfcylinder/: mesh.inp
examples/example14_wigleyhull_ITTC_1984/: mesh.inp  wave_elevation.py
include/: AdaptiveRefinement.h  AdaptiveRefinementUtil.h  AreaRefinement.h  AspectRatioRefinement.h  BVH_SurfaceSelector.h  Body.h  BodySettingsReaderJSON.h  BoxRefinement.h  CurvatureRefinement.h  DistanceRatioRefinement.h  DistanceRefinement.h  ErrorMessage.h  GeometryInput.h  GeometrySetup.h  GridRefinement.h  GridRefinementCreator.h  HeightRatioRefinement.h  IGridRefinement.h  IPhysicalDomain.h  JSON_BodyReader.h  KCS_LimfjordSetup.h  ManifoldCreator.h  ManifoldRefinement.h  MeshReader.h  MeshUtil.h  MultiMeshDomain.h  PiBEMSettings.h  PiBEMSettingsReaderJSON.h  RefinementUtil.h  Shape.h  ShapeInput.h  ShapesReader.h  SurfaceMoments.h  UTM.h  VerticalMeshProjection.h  WaterPlaneMoments.h  WireUtil.h  Writer.h  bem_fma.h  bem_problem.h  (+10 more)
python/src/: readvtu.py  visualization.py
source/: AdaptiveRefinement.cc  AreaRefinement.cc  AspectRatioRefinement.cc  BoxRefinement.cc  CurvatureRefinement.cc  DistanceRatioRefinement.cc  DistanceRefinement.cc  ErrorMessage.cc  GridRefinementCreator.cc  HeightRatioRefinement.cc  ManifoldRefinement.cc  MultiMeshDomain.cc  UTM.cc  VerticalMeshProjection.cc  bem_fma.cc  bem_problem.cc  boundary_conditions.cc  computational_domain.cc  driver.cc  main.cc  my_manifold_lib.cc  my_utilities.cc  octree_block.cc  singular_kernel_integral.cc  singular_kernel_integral_util.cc  surface_integral_util.cc
tests/: CMakeLists.txt
tests/HBIE_convergence_test/: CMakeLists.txt  HBIE_convergence_test1.csv  HBIE_convergence_test_results.py  main.cpp  parameters_bem_3.prm
tests/test01_cad_import_and_curvature_refinement/: CMakeLists.txt  meshResult.inp  parameters_bem_3.prm  refinement.json  test01_cad_import_and_curvature_refinement.cc  used.prm
tests/test02_make_edges_conformal/: CMakeLists.txt  test02_make_edges_conformal.cc
tests/test03_IntersectRayAABB/: CMakeLists.txt  test03_IntersectRayAABB.cc
tests/test04_my_line_intersection/: CMakeLists.txt  test04_my_line_intersection.cc
tests/test05_cad_import_and_global_refinement/: CMakeLists.txt  test05_cad_import_and_global_refinement.cc  test05_cad_import_and_global_refinement.prm
tests/test06_area_and_volume/: CMakeLists.txt  test06_area_and_volume.cc
tests/test07_point_source_and_derivatives/: CMakeLists.txt  test07_point_source_and_derivatives.cc
tests/test08_center_of_pressure/: CMakeLists.txt  test08_center_of_pressure.cc
tests/test09_line_loop/: CMakeLists.txt  test09_line_loop.cc  test09_line_loop_DTC.prm  test09_line_loop_KCS.prm
tests/test10_dof_arrangement/: CMakeLists.txt  test10_dof_arrangement.cc
tests/test11_dof_arrangement_parallel/: CMakeLists.txt  test11_dof_arrangement_parallel.cc
tests/test12_water_plane_moments/: CMakeLists.txt  test12_water_plane_moments.cc
tests/test13_residual/: CMakeLists.txt  test13_residual.cc  test13_residual01.prm  test13_residual02.prm
tests/test14_AdaptiveRefinement/: CMakeLists.txt  mesh.inp  test14_AdaptiveRefinement.cc
tests/test15_cad_bathymetry/: CMakeLists.txt  KCS_LimfjordSetup.h  ManifoldCreator.h  MeshReader.h  MeshUtil.h  test15_cad_bathymetry.cc
tests/test_hypersingular/: CMakeLists.txt  Revolution_1.stl  test_hypersingular.cc
(+741 files in other folders)
