add_subdirectory(test01_cad_import_and_curvature_refinement)
add_subdirectory(test02_make_edges_conformal)
add_subdirectory(test03_IntersectRayAABB)
add_subdirectory(test04_my_line_intersection)
add_subdirectory(test05_cad_import_and_global_refinement)
add_subdirectory(test06_area_and_volume)
INCLUDE_DIRECTORIES(${D2K_INCLUDE_DIRS})
DEAL_II_PICKUP_TESTS()


