add_subdirectory(test01_cad_import_and_curvature_refinement)
add_subdirectory(test02_make_edges_conformal)
add_subdirectory(test03_IntersectRayAABB)
add_subdirectory(test04_my_line_intersection)
add_subdirectory(test05_cad_import_and_global_refinement)
add_subdirectory(test06_area_and_volume)
add_subdirectory(test07_point_source_and_derivatives)
add_subdirectory(test08_center_of_pressure)
add_subdirectory(test09_line_loop)
add_subdirectory(test10_dof_arrangement)
add_subdirectory(test11_dof_arrangement_parallel)
add_subdirectory(test12_water_plane_moments)
add_subdirectory(test13_residual)
add_subdirectory(test14_AdaptiveRefinement)
add_subdirectory(test15_cad_bathymetry)
INCLUDE_DIRECTORIES(${D2K_INCLUDE_DIRS})
DEAL_II_PICKUP_TESTS()


